2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Project.cs: Don't delete files from the
	  output directory if they were directly referenced from that
	  directory. Fixes bug #472620 - Doing a Clean or Rebuild
	  removes all referenced assemblies from output dir even if
	  they aren't built.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs: Dereference symbolic
	  links when opening a project or solution. Fixes bug #441886
	  - Opening a solution by it's link makes solution's root
	  directory the same as link's.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs:
	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	  Improved error reporting when a reference is not found at
	  build time. Fixes bug #390291 - Lack of local referenced
	  assembly should report the affected project (and maybe
	  should be a warning, not an error).

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  Use a case-insensitive compare for bools.

2009-02-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/CustomCommand.cs:
	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/CustomCommandCollection.cs: Make sure
	  the 'Execute' custom command can be executed using the
	  provided execution context.

	* MonoDevelop.Projects/CustomCommandExtension.cs: Use the
	  default execution handler for running the
	  After/BeforeExecute commands. The main handler is only for
	  the debugged application.

	* MonoDevelop.Projects/Project.cs: Consider the project dirty
	  if the project file has changed. Fixes bug #473696.

2009-02-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/AbstractMember.cs: fixed possible
	  null reference exception.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>
